<resources>
    <string name="app_name">Examen1EvaPsp</string>
    <string name="cars_activity_name">Lista de Coches</string>
    <string name="car_activity_name">Coche</string>
    <string name="create_reparation_button">Crear reparación</string>
    <string name="create_car_button">Nuevo +</string>
    <string name="carRegistration">Matrícula</string>
    <string name="model">Modelo</string>
    <string name="color">Color</string>
    <string name="authortitle">Author Page</string>

    <string name="booktitle">Book Page</string>
    <string name="nombre">BIHOTZ BEGI</string>
    <string name="login">LOGIN</string>
    <string name="registro">REGISTRO</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="NOMBRE">NOMBRE</string>
    <string name="APELLIDO">APELLIDO</string>
    <string name="G_MAIL">G-MAIL</string>
    <string name="TEL">TELEFONO</string>
    <string name="DNI">DNI</string>
    <string name="password2">PASSWORD 2</string>
    <string name="apuntarnota">Apuntar notas</string>
    <string name="notas">NOTAS</string>

</resources>