<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C900A86B">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="302dp"
        android:layout_height="55dp"
        android:text="@string/registro"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="175dp"
        android:layout_height="157dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:src="@mipmap/captura_de_pantalla_2024_03_14_122130" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="338dp"
        android:layout_height="360dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextText13"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="#FAFAFA"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextText18"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="#FAFAFA"
                android:ems="10"
                android:hint="@string/NOMBRE"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextText19"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="#FAFAFA"
                android:ems="10"
                android:hint="@string/APELLIDO"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextText17"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="#FAFAFA"
                android:ems="10"
                android:hint="@string/G_MAIL"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextText16"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="#FAFAFA"
                android:ems="10"
                android:hint="@string/TEL"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextText15"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="#FAFAFA"
                android:ems="10"
                android:hint="@string/DNI"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextTextPassword3"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/editTextTextPassword4"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/password2"
                android:inputType="textPassword" />
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#9966CC"
        android:text="@string/registro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />


</androidx.constraintlayout.widget.ConstraintLayout>