<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/cars_activity_name" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <EditText
            android:id="@+id/carRegistrationEditText"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_weight="1"
            android:padding="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:hint="@string/carRegistration"
            android:layout_width="match_parent"/>
        <EditText
            android:id="@+id/carModelEditText"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_weight="1"
            android:padding="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:hint="@string/model"
            android:layout_width="match_parent"/>
        <EditText
            android:id="@+id/carColorEditText"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_weight="1"
            android:padding="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:hint="@string/color"
            android:layout_width="match_parent"/>
        <Button
            android:id="@+id/createCarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_car_button"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cars_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_weight="1" >

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>
